Fixed the remaining bug in the jupyter notebook.  Now, moving on to:     - implement u_rhs     -

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -574,7 +574,7 @@
     "            get quenched values from blackboard\n",
     "            '''\n",
     "            # run propagation with keyword arguments state_dim_l, state_dim_mf\n",
-    "            q_ls_bars, p_ls_bars, p_mfs_bars, u_bars = sliding_window(agent)\n",
+    "            q_ls_bars, p_ls_bars, p_mfs_bars, u_bars, windows = sliding_window(agent)\n",
     "\n",
     "#     def L_mf_q_dot(self, q_mf, q_mf_dot, u_mf):\n",
     "#         # q_mf_dot, q_mf (inputs) here will be vectors with ALL of the states\n",
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -729,7 +729,7 @@
        " 'u_s': {'1': 0}}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -863,7 +863,7 @@
        "[('1', 0), ('2', 2)]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -979,7 +979,7 @@
        "array([0, 0, 0, 0])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -1001,24 +1001,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "too many values to unpack",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-20-d70db86759c4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msync\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msynchronize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-6-85702b5c8ebd>\u001b[0m in \u001b[0;36msynchronize\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     25\u001b[0m             '''\n\u001b[1;32m     26\u001b[0m             \u001b[0;31m# run propagation with keyword arguments state_dim_l, state_dim_mf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m             \u001b[0mq_ls_bars\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_ls_bars\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mfs_bars\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_bars\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msliding_window\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0magent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;31m#     def L_mf_q_dot(self, q_mf, q_mf_dot, u_mf):\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: too many values to unpack"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sync.synchronize()"
    ]
